--- a/android/src/main/res/values/dimens.xml
+++ b/android/src/main/res/values/dimens.xml
@@ -22,10 +22,12 @@
 
     <!-- Button heights -->
     <dimen name="button_height_44dp">44dp</dimen>
+    <dimen name="button_height_40dp">40dp</dimen>
     <dimen name="button_height_32dp">32dp</dimen>
 
     <!-- Margins -->
     <dimen name="margin_16dp">16dp</dimen>
+    <dimen name="margin_2dp">2dp</dimen>
     <dimen name="margin_4dp">4dp</dimen>
     <dimen name="margin_8dp">8dp</dimen>
     <dimen name="margin_6dp">6dp</dimen>
@@ -54,10 +56,14 @@
 
     <!-- Corner radius -->
     <dimen name="corner_radius_6dp">6dp</dimen>
+    <dimen name="corner_radius_8dp">8dp</dimen>
     <dimen name="corner_radius_12dp">12dp</dimen>
 
     <!-- Stroke -->
     <dimen name="stroke_width_1dp">1dp</dimen>
     <dimen name="stroke_width_2dp">2dp</dimen>
+
+    <!-- Progress size -->
+    <dimen name="progress_size_24dp">24dp</dimen>
 
 </resources>
