--- a/android/src/main/res/layout/azure_communication_ui_calling_bottom_drawer_cell.xml
+++ b/android/src/main/res/layout/azure_communication_ui_calling_bottom_drawer_cell.xml
@@ -23,14 +23,15 @@
 
     <ImageView
         android:id="@+id/azure_communication_ui_cell_icon"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="18dp"
+        android:layout_width="@dimen/icon_size_24dp"
+        android:layout_height="@dimen/icon_size_24dp"
+        android:layout_marginStart="@dimen/margin_16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/azure_communication_ui_calling_ic_fluent_speaker_2_24_filled_composite_button_enabled"
+        app:srcCompat="@drawable/ic_speaker"
         android:importantForAccessibility="no"
+        app:tint="@color/purple"
         />
 
     <com.microsoft.fluentui.persona.AvatarView
@@ -81,22 +82,22 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:text="@string/azure_communication_ui_calling_audio_device_drawer_android"
-            android:textColor="@color/azure_communication_ui_calling_toggle_selector" />
+            android:textAppearance="@style/Text.CircularStdBook.16sp" />
 
         <TextView
             android:id="@+id/azure_communication_ui_calling_bottom_drawer_sub_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:textColor="@color/azure_communication_ui_calling_color_participant_list_mute_mic"
+            android:textAppearance="@style/Text.CircularStdBook.16sp"
             android:visibility="gone" />
     </LinearLayout>
 
     <ImageView
         android:id="@+id/azure_communication_ui_cell_check_mark"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginEnd="12dp"
+        android:layout_width="@dimen/icon_size_24dp"
+        android:layout_height="@dimen/icon_size_24dp"
+        android:layout_marginEnd="16dp"
         android:background="@android:color/transparent"
         android:contentDescription="@string/azure_communication_ui_calling_setup_view_audio_device_selected_accessibility_label"
         android:src="@drawable/ms_ic_checkmark_24_filled"
@@ -104,7 +105,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/azure_communication_ui_calling_toggle_selector"
+        app:tint="@color/purple"
         />
 
     <ImageView
