--- a/android/src/main/res/values/dimens.xml
+++ b/android/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
     <!-- Text sizes -->
     <dimen name="text_size_48">48sp</dimen>
     <dimen name="text_size_24">24sp</dimen>
+    <dimen name="text_size_20">20sp</dimen>
     <dimen name="text_size_32">32sp</dimen>
     <dimen name="text_size_16">16sp</dimen>
     <dimen name="text_size_18">18sp</dimen>
@@ -62,6 +63,9 @@
     <!-- Stroke -->
     <dimen name="stroke_width_1dp">1dp</dimen>
     <dimen name="stroke_width_2dp">2dp</dimen>
+
+    <!-- Icon size -->
+    <dimen name="icon_size_24dp">24dp</dimen>
 
     <!-- Progress size -->
     <dimen name="progress_size_24dp">24dp</dimen>
