--- a/android/src/main/res/values/dimens.xml
+++ b/android/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
 
     <!-- Elevation -->
     <dimen name="elevation_0dp">0dp</dimen>
+    <dimen name="elevation_4dp">4dp</dimen>
 
     <!-- Text sizes -->
     <dimen name="text_size_48">48sp</dimen>
@@ -58,6 +59,7 @@
     <!-- Corner radius -->
     <dimen name="corner_radius_6dp">6dp</dimen>
     <dimen name="corner_radius_8dp">8dp</dimen>
+    <dimen name="corner_radius_10dp">10dp</dimen>
     <dimen name="corner_radius_12dp">12dp</dimen>
 
     <!-- Stroke -->
