--- a/android/src/main/res/layout/azure_communication_ui_calling_control_bar_view.xml
+++ b/android/src/main/res/layout/azure_communication_ui_calling_control_bar_view.xml
@@ -4,107 +4,102 @@
   -->
 <com.acs_plugin.calling.presentation.fragment.calling.controlbar.ControlBarView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/azure_communication_ui_call_call_buttons"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/azure_communication_ui_calling_color_background"
-    android:layout_marginEnd="15dp"
-    android:layout_marginVertical="15dp"
-    android:layout_marginStart="15dp"
-    >
+    android:layout_marginHorizontal="@dimen/margin_16dp"
+    android:layout_marginVertical="@dimen/margin_12dp"
+    android:background="@color/white">
 
-        <ImageButton
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/azure_communication_ui_call_cameraToggle"
-            android:layout_width="50dp"
-            android:layout_height="60dp"
-            android:background="@drawable/azure_communication_ui_calling_image_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/margin_6dp"
             android:contentDescription="@string/azure_communication_ui_calling_view_button_toggle_video_accessibility_label"
-            android:importantForAccessibility="yes"
             android:focusable="true"
-            android:src="@drawable/azure_communication_ui_calling_toggle_selector_camera_for_call"
+            android:importantForAccessibility="yes"
+            android:padding="@dimen/padding_8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/azure_communication_ui_call_call_audio"
             app:layout_constraintHorizontal_bias="0.5"
-
+            app:layout_constraintHorizontal_chainStyle="spread_inside"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginEnd="5dp"
-            />
+            app:srcCompat="@drawable/ic_camera_off"
+            app:tint="@color/setup_control_button_color_selector" />
 
-        <ImageButton
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/azure_communication_ui_call_call_audio"
-            android:layout_width="50dp"
-            android:layout_height="60dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/margin_6dp"
             android:accessibilityTraversalAfter="@id/azure_communication_ui_call_cameraToggle"
-            android:background="@drawable/azure_communication_ui_calling_image_button"
             android:contentDescription="@string/azure_communication_ui_calling_view_button_toggle_audio_accessibility_label"
-            android:importantForAccessibility="yes"
             android:focusable="true"
-            android:src="@drawable/azure_communication_ui_calling_toggle_selector_mic_for_call"
+            android:importantForAccessibility="yes"
+            android:padding="@dimen/padding_8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/azure_communication_ui_call_audio_device_button"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/azure_communication_ui_call_cameraToggle"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginEnd="5dp"
-            />
+            app:srcCompat="@drawable/ic_microphone_off"
+            app:tint="@color/setup_control_button_color_selector" />
 
-        <ImageButton
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/azure_communication_ui_call_audio_device_button"
-            style="@style/Widget.FluentUI.Button"
-            android:layout_width="50dp"
-            android:layout_height="60dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/margin_6dp"
             android:accessibilityTraversalAfter="@id/azure_communication_ui_call_call_audio"
-            android:background="@drawable/azure_communication_ui_calling_image_button"
             android:contentDescription="@string/azure_communication_ui_calling_view_button_device_options_accessibility_label"
-            android:importantForAccessibility="yes"
             android:focusable="true"
-            android:src="@drawable/azure_communication_ui_calling_ic_fluent_speaker_2_24_regular_composite_button_filled"
+            android:importantForAccessibility="yes"
+            android:padding="@dimen/padding_8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/azure_communication_ui_call_control_bar_more"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/azure_communication_ui_call_call_audio"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginEnd="5dp"
-            />
+            app:srcCompat="@drawable/ic_speaker"
+            app:tint="@color/setup_control_button_color_selector" />
 
-        <ImageButton
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/azure_communication_ui_call_control_bar_more"
-            style="@style/Widget.FluentUI.Button"
-            android:layout_width="50dp"
-            android:layout_height="60dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="5dp"
             android:accessibilityTraversalAfter="@id/azure_communication_ui_call_audio_device_button"
             android:background="@drawable/azure_communication_ui_calling_image_button"
             android:contentDescription="@string/azure_communication_ui_calling_view_more_menu_accessibility_label"
-            android:importantForAccessibility="yes"
             android:focusable="true"
-            android:src="@drawable/azure_communication_ui_calling_selector_three_dot_button_22"
+            android:importantForAccessibility="yes"
+            android:padding="@dimen/padding_8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/azure_communication_ui_call_end_call_button"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/azure_communication_ui_call_audio_device_button"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginEnd="5dp"
-            />
+            app:srcCompat="@drawable/ic_more"
+            app:tint="@color/setup_control_button_color_selector" />
 
-        <ImageButton
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/azure_communication_ui_call_end_call_button"
-            style="@style/Widget.FluentUI.Button"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="@dimen/button_height_56dp"
+            android:layout_height="@dimen/button_height_56dp"
             android:accessibilityTraversalAfter="@id/azure_communication_ui_call_control_bar_more"
-            android:background="@drawable/azure_communication_ui_calling_corner_radius_rectangle_4dp"
-            android:backgroundTint="@color/azure_communication_ui_calling_hangup_selector"
+            android:background="@drawable/bg_error_rounded_r14"
             android:contentDescription="@string/azure_communication_ui_calling_view_button_hang_up_accessibility_label"
-            android:importantForAccessibility="yes"
             android:focusable="true"
-            android:src="@drawable/azure_communication_ui_calling_ic_fluent_call_end_28_filled_composite_button_filled"
+            android:importantForAccessibility="yes"
+            android:padding="@dimen/padding_12dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/azure_communication_ui_call_control_bar_more"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
+            app:srcCompat="@drawable/ic_phone_call"
+            app:tint="@color/white" />
 
 </com.acs_plugin.calling.presentation.fragment.calling.controlbar.ControlBarView>
