--- a/android/src/main/res/layout/azure_communication_ui_calling_call_fragment.xml
+++ b/android/src/main/res/layout/azure_communication_ui_calling_call_fragment.xml
@@ -2,7 +2,8 @@
    Copyright (c) Microsoft Corporation. All rights reserved.
    Licensed under the MIT License.
   -->
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/azure_communication_ui_calling_call_frame_layout"
@@ -10,8 +11,7 @@
     android:layout_height="match_parent"
     android:alpha="1"
     tools:context="com.acs_plugin.calling.presentation.fragment.calling.CallingFragment"
-    android:clipChildren="false"
-    >
+    android:clipChildren="false">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/azure_communication_ui_call_main_layout"
@@ -22,8 +22,7 @@
         android:focusable="false"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginBottom="4dp"
-        >
+        android:layout_marginBottom="4dp">
 
         <com.acs_plugin.calling.presentation.fragment.calling.participant.grid.ParticipantGridView
             android:id="@+id/azure_communication_ui_call_participant_container"
@@ -32,8 +31,7 @@
             android:layout_row="0"
             android:layout_column="0"
             android:layout_margin="2dp"
-            android:orientation="vertical"
-            />
+            android:orientation="vertical" />
 
         <include layout="@layout/azure_communication_ui_calling_call_local_user_view" />
 
