--- a/android/src/main/res/layout/azure_communication_ui_calling_call_local_user_view.xml
+++ b/android/src/main/res/layout/azure_communication_ui_calling_call_local_user_view.xml
@@ -2,15 +2,16 @@
    Copyright (c) Microsoft Corporation. All rights reserved.
    Licensed under the MIT License.
   -->
-<com.acs_plugin.calling.presentation.fragment.calling.localuser.LocalParticipantView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.acs_plugin.calling.presentation.fragment.calling.localuser.LocalParticipantView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/azure_communication_ui_call_local_user_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:focusable="false"
     android:accessibilityTraversalAfter="@id/azure_communication_ui_call_floating_header"
-    android:padding="4dp"
-    >
+    android:padding="@dimen/padding_4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/azure_communication_ui_call_local_full_video_holder"
@@ -19,94 +20,81 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <include layout="@layout/azure_communication_ui_calling_call_local_pip_video"/>
-
-    <ImageView
-        android:id="@+id/azure_communication_ui_call_switch_camera_button"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_margin="4dp"
-        android:background="@drawable/azure_communication_ui_calling_corner_radius_rectangle_4dp"
-        android:backgroundTint="@color/azure_communication_ui_calling_color_button_switch_camera"
-        android:contentDescription="@string/azure_communication_ui_calling_button_switch_camera_accessibility_label"
-        android:accessibilityTraversalAfter="@id/azure_communication_ui_call_floating_header"
-        android:padding="5dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/azure_communication_ui_calling_ic_fluent_camera_switch_24_regular_composite_button_enabled"
-        />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/azure_communication_ui_call_local_avatarHolder"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/azure_communication_ui_calling_corner_radius_rectangle_4dp_surface"
+        android:background="@drawable/bg_light_pink_rounded_r12"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        >
+        app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
+        <com.microsoft.fluentui.persona.AvatarView
+            android:id="@+id/azure_communication_ui_call_local_avatar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical"
+            android:layout_marginTop="6dp"
+            android:visibility="visible"
+            app:fluentui_avatarSize="xxlarge"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            >
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <com.microsoft.fluentui.persona.AvatarView
-                android:id="@+id/azure_communication_ui_call_local_avatar"
+        <LinearLayout
+            android:id="@+id/local_participant_layer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_8dp"
+            android:paddingHorizontal="@dimen/padding_4dp"
+            android:paddingVertical="@dimen/padding_2dp"
+            android:background="@drawable/bg_light_pink_rounder_r6"
+            android:backgroundTint="@color/white"
+            android:orientation="horizontal"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/azure_communication_ui_call_local_display_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
-                android:visibility="visible"
-                app:fluentui_avatarSize="xxlarge"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                />
+                android:ellipsize="end"
+                android:maxLines="1"
+                style="@style/Text.CircularStdBook.14sp"
+                tools:text="User123 (You)"/>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="15dp"
-                android:layout_marginTop="11dp"
-                android:gravity="center"
-                android:orientation="horizontal"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/azure_communication_ui_call_local_avatar"
-                >
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/azure_communication_ui_call_local_mic_indicator"
+                android:layout_width="@dimen/icon_size_14dp"
+                android:layout_height="@dimen/icon_size_14dp"
+                android:layout_gravity="center"
+                android:layout_marginStart="@dimen/margin_4dp"
+                app:tint="@color/text_primary"
+                app:srcCompat="@drawable/ic_microphone_off" />
 
-                <TextView
-                    android:id="@+id/azure_communication_ui_call_local_display_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:ellipsize="end"
-                    android:singleLine="true"
-                    android:textColor="@color/azure_communication_ui_calling_color_on_background"
-                    />
-
-                <ImageView
-                    android:id="@+id/azure_communication_ui_call_local_mic_indicator"
-                    android:layout_width="17dp"
-                    android:layout_height="17dp"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="4dp"
-                    app:srcCompat="@drawable/azure_communication_ui_calling_ic_fluent_mic_off_24_filled_composite_button_filled"
-                    />
-
-            </LinearLayout>
         </LinearLayout>
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/azure_communication_ui_call_switch_camera_button"
+            android:layout_width="@dimen/button_height_32dp"
+            android:layout_height="@dimen/button_height_32dp"
+            android:layout_margin="@dimen/margin_8dp"
+            android:background="@drawable/bg_purple_rounded_r8"
+            android:backgroundTint="@color/white"
+            android:contentDescription="@string/azure_communication_ui_calling_button_switch_camera_accessibility_label"
+            android:accessibilityTraversalAfter="@id/azure_communication_ui_call_floating_header"
+            android:padding="@dimen/padding_6dp"
+            android:visibility="gone"
+            tools:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:srcCompat="@drawable/ic_camera_reverse" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </com.acs_plugin.calling.presentation.fragment.calling.localuser.LocalParticipantView>
