--- a/android/src/main/res/layout/azure_communication_ui_calling_call_local_user_view.xml
+++ b/android/src/main/res/layout/azure_communication_ui_calling_call_local_user_view.xml
@@ -55,9 +55,9 @@
             android:id="@+id/azure_communication_ui_call_local_avatar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
             android:visibility="visible"
             app:fluentui_avatarSize="xxlarge"
+            app:fluentui_avatarBackgroundColor="@color/purple_blue"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
