--- a/android/src/main/res/layout/azure_communication_ui_calling_fragment_setup.xml
+++ b/android/src/main/res/layout/azure_communication_ui_calling_fragment_setup.xml
@@ -47,6 +47,7 @@
             android:layout_height="wrap_content"
             android:visibility="visible"
             app:fluentui_avatarSize="xxlarge"
+            app:fluentui_avatarBackgroundColor="@color/purple_blue"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
