--- a/android/src/main/res/layout/azure_communication_ui_calling_call_fragment.xml
+++ b/android/src/main/res/layout/azure_communication_ui_calling_call_fragment.xml
@@ -9,7 +9,6 @@
     android:id="@+id/azure_communication_ui_calling_call_frame_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:alpha="1"
     tools:context="com.acs_plugin.calling.presentation.fragment.calling.CallingFragment"
     android:clipChildren="false">
 
@@ -17,12 +16,12 @@
         android:id="@+id/azure_communication_ui_call_main_layout"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:focusable="false"
+        android:layout_marginBottom="@dimen/margin_4dp"
         app:layout_constraintBottom_toTopOf="@+id/captions_bottom_anchor"
         app:layout_constraintEnd_toEndOf="parent"
-        android:focusable="false"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginBottom="4dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <com.acs_plugin.calling.presentation.fragment.calling.participant.grid.ParticipantGridView
             android:id="@+id/azure_communication_ui_call_participant_container"
@@ -30,7 +29,7 @@
             android:layout_height="match_parent"
             android:layout_row="0"
             android:layout_column="0"
-            android:layout_margin="2dp"
+            android:layout_margin="@dimen/margin_4dp"
             android:orientation="vertical" />
 
         <include layout="@layout/azure_communication_ui_calling_call_local_user_view" />
@@ -52,16 +51,14 @@
         android:layout_width="0dp"
         android:layout_height="100dp"
         app:layout_constraintTop_toTopOf="@+id/azure_communication_ui_call_main_layout"
-        app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <FrameLayout
         android:id="@+id/captions_bottom_anchor"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/azure_communication_ui_calling_control_bar_view_wrapper"
-        />
+        app:layout_constraintBottom_toTopOf="@+id/azure_communication_ui_calling_control_bar_view_wrapper" />
 
     <View
         android:id="@+id/azure_communication_ui_calling_captions_overlay"
@@ -74,8 +71,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/azure_communication_ui_call_main_layout"
         android:visibility="gone"
         android:clickable="true"
-        android:importantForAccessibility="no"
-        />
+        android:importantForAccessibility="no" />
 
     <LinearLayout
         android:id="@+id/azure_communication_ui_calling_captions_view_wrapper"
@@ -85,12 +81,12 @@
         app:layout_constraintTop_toTopOf="@+id/captions_bottom_anchor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/azure_communication_ui_calling_control_bar_view_wrapper"
-        >
+        app:layout_constraintBottom_toTopOf="@+id/azure_communication_ui_calling_control_bar_view_wrapper">
+
         <include
             layout="@layout/azure_communication_ui_calling_captions"
-            android:accessibilityTraversalAfter="@id/azure_communication_ui_call_main_layout"
-            />
+            android:accessibilityTraversalAfter="@id/azure_communication_ui_call_main_layout" />
+
     </LinearLayout>
 
     <include
@@ -100,8 +96,7 @@
         app:layout_constraintBottom_toTopOf="@+id/azure_communication_ui_calling_control_bar_view_wrapper"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <include
         layout="@layout/azure_communication_ui_calling_connecting_lobby_overlay"
@@ -110,8 +105,7 @@
         app:layout_constraintBottom_toTopOf="@+id/azure_communication_ui_calling_control_bar_view_wrapper"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <include layout="@layout/azure_communication_ui_calling_toast_notification"
         android:layout_width="wrap_content"
@@ -119,8 +113,7 @@
         android:layout_margin="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/captions_bottom_anchor"
-        />
+        app:layout_constraintBottom_toTopOf="@+id/captions_bottom_anchor" />
 
     <include
         layout="@layout/azure_communication_ui_calling_call_hold_overlay"
@@ -129,9 +122,7 @@
         app:layout_constraintBottom_toTopOf="@+id/azure_communication_ui_calling_control_bar_view_wrapper"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
-
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/azure_communication_ui_calling_control_bar_view_wrapper"
@@ -143,12 +134,12 @@
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        >
+        app:layout_constraintStart_toStartOf="parent">
+
         <include
             layout="@layout/azure_communication_ui_calling_control_bar_view"
-            android:accessibilityTraversalAfter="@id/azure_communication_ui_calling_captions_view_wrapper"
-            />
+            android:accessibilityTraversalAfter="@id/azure_communication_ui_calling_captions_view_wrapper" />
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
