--- a/android/src/main/res/layout/azure_communication_ui_calling_call_local_pip_video.xml
+++ b/android/src/main/res/layout/azure_communication_ui_calling_call_local_pip_video.xml
@@ -41,6 +41,7 @@
                 android:layout_height="wrap_content"
                 android:visibility="visible"
                 app:fluentui_avatarSize="large"
+                app:fluentui_avatarBackgroundColor="@color/purple_blue"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
