--- a/android/src/main/res/layout/azure_communication_ui_calling_lobby_header.xml
+++ b/android/src/main/res/layout/azure_communication_ui_calling_lobby_header.xml
@@ -5,95 +5,84 @@
 <com.acs_plugin.calling.presentation.fragment.calling.lobby.LobbyHeaderView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/azure_communication_ui_calling_lobby_header"
     android:importantForAccessibility="yes"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
-    android:layout_marginTop="8dp"
-    android:layout_marginEnd="8dp"
-    android:alpha="0.8"
-    android:background="@drawable/azure_communication_ui_calling_corner_radius_rectangle_6dp_floating_header"
+    android:layout_margin="@dimen/margin_12dp"
+    android:background="@drawable/bg_white_rounded_r10"
+    android:elevation="@dimen/elevation_4dp"
     android:visibility="gone"
+    tools:visibility="visible"
     android:focusable="true"
     android:focusableInTouchMode="true"
     android:accessibilityTraversalAfter="@id/azure_communication_ui_call_floating_header"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/azure_communication_ui_call_floating_header"
-    >
+    app:layout_constraintTop_toBottomOf="@+id/azure_communication_ui_call_floating_header">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/azure_communication_ui_calling_lobby_add_participant_image"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginBottom="12dp"
-        android:layout_marginStart="12dp"
+        android:layout_width="@dimen/icon_size_24dp"
+        android:layout_height="@dimen/icon_size_24dp"
+        android:layout_margin="@dimen/margin_12dp"
         android:importantForAccessibility="no"
         android:focusable="true"
         app:srcCompat="@drawable/azure_communication_ui_calling_ic_fluent_lobby_header_24"
-        app:tint="@color/azure_communication_ui_calling_color_white"
+        app:tint="@color/purple"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/azure_communication_ui_calling_lobby_header_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="12dp"
-        android:fontFamily="sans-serif-medium"
+        android:layout_marginHorizontal="@dimen/margin_12dp"
+        style="@style/Text.CircularStdMedium.14sp"
         app:layout_constraintHorizontal_bias="0.0"
         android:text="@string/azure_communication_ui_calling_lobby_header_text"
         android:importantForAccessibility="yes"
         android:focusable="true"
-        android:textColor="@color/azure_communication_ui_calling_color_white"
         app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/azure_communication_ui_calling_lobby_open_list_button"
         app:layout_constraintLeft_toLeftOf="@+id/azure_communication_ui_calling_lobby_add_participant_image"
         app:layout_constraintStart_toEndOf="@id/azure_communication_ui_calling_lobby_add_participant_image"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <com.microsoft.fluentui.widget.Button
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/azure_communication_ui_calling_lobby_open_list_button"
-        style="@style/Widget.FluentUI.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="12dp"
-        android:backgroundTint="@color/azure_communication_ui_calling_primary_selector"
+        android:layout_marginEnd="@dimen/margin_16dp"
+        android:background="@drawable/bg_purple_rounded_r8"
         android:focusable="true"
         android:importantForAccessibility="yes"
         android:gravity="center"
         android:text="@string/azure_communication_ui_calling_lobby_header_view_participant_button"
-        android:alpha="1"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textColor="?attr/azure_communication_ui_calling_foreground_on_primary_color"
-        app:backgroundTint="@color/azure_communication_ui_calling_primary_selector"
+        style="@style/Text.CircularStdMedium.14sp"
+        android:textColor="@color/white"
+        android:paddingHorizontal="@dimen/padding_16dp"
+        android:paddingVertical="@dimen/padding_8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/azure_communication_ui_calling_lobby_close_button"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageButton
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/azure_communication_ui_calling_lobby_close_button"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="12dp"
-        android:backgroundTint="@color/azure_communication_ui_calling_color_button_background_transparent"
+        android:layout_width="@dimen/icon_size_24dp"
+        android:layout_height="@dimen/icon_size_24dp"
+        android:layout_marginEnd="@dimen/margin_12dp"
+        app:tint="@color/purple"
         android:contentDescription="@string/azure_communication_ui_calling_lobby_header_close_description"
         android:importantForAccessibility="yes"
         android:focusable="true"
         app:srcCompat="@drawable/azure_communication_ui_calling_leave_confirm_dismiss_header_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
+
 </com.acs_plugin.calling.presentation.fragment.calling.lobby.LobbyHeaderView>
 
