Updated design for all overlays at calling screen

--- a/android/src/main/res/layout/azure_communication_ui_calling_toast_notification.xml
+++ b/android/src/main/res/layout/azure_communication_ui_calling_toast_notification.xml
@@ -2,25 +2,20 @@
    Copyright (c) Microsoft Corporation. All rights reserved.
    Licensed under the MIT License.
   -->
-<com.acs_plugin.calling.presentation.fragment.calling.notification.ToastNotificationView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<com.acs_plugin.calling.presentation.fragment.calling.notification.ToastNotificationView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/azure_communication_ui_calling_toast_notification"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
-    android:layout_marginTop="8dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginBottom="8dp"
-    android:paddingHorizontal="8dp"
-    >
+    android:layout_margin="@dimen/margin_12dp"
+    android:paddingHorizontal="@dimen/padding_8dp">
+
     <LinearLayout
         android:id="@+id/azure_communication_ui_calling_toast_notification_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:gravity="center"
-        >
-    </LinearLayout>
+        android:gravity="center" />
 
 </com.acs_plugin.calling.presentation.fragment.calling.notification.ToastNotificationView>
 
