--- a/android/src/main/res/layout/azure_communication_ui_calling_call_hold_overlay.xml
+++ b/android/src/main/res/layout/azure_communication_ui_calling_call_hold_overlay.xml
@@ -2,58 +2,72 @@
    Copyright (c) Microsoft Corporation. All rights reserved.
    Licensed under the MIT License.
   -->
-<com.acs_plugin.calling.presentation.fragment.calling.hold.OnHoldOverlayView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.acs_plugin.calling.presentation.fragment.calling.hold.OnHoldOverlayView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/azure_communication_ui_call_hold_overlay"
     android:layout_width="0dp"
     android:layout_height="0dp"
     android:layout_row="2"
     android:layout_column="0"
-    android:background="@color/azure_communication_ui_calling_color_status_bar"
+    android:background="@color/white"
     android:gravity="center"
     android:orientation="vertical"
     app:layout_constraintBottom_toTopOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    >
+    app:layout_constraintTop_toTopOf="parent">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/azure_communication_ui_call_hold_overlay_wait_for_host_image"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="@dimen/icon_size_24dp"
+        android:layout_height="@dimen/icon_size_24dp"
         android:contentDescription="@string/azure_communication_ui_calling_lobby_view_text_waiting_for_host"
         android:importantForAccessibility="no"
-        android:src="@drawable/azure_communication_ui_calling_ic_fluent_clock_24_filled"
-        />
+        app:tint="@color/text_primary"
+        app:srcCompat="@drawable/azure_communication_ui_calling_ic_fluent_clock_24_filled" />
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/azure_communication_ui_call_hold_overlay_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/margin_10dp"
         android:text="@string/azure_communication_ui_calling_lobby_view_text_waiting_for_host"
-        android:textColor="@color/azure_communication_ui_calling_color_call_on_hold_overlay_text"
-        android:textSize="20sp"
+        style="@style/Text.CircularStdBold.20sp"
         android:gravity="center"
-        android:textAlignment="center"
-        />
+        android:textAlignment="center" />
 
-    <com.microsoft.fluentui.widget.Button
+    <FrameLayout
         android:id="@+id/azure_communication_ui_call_hold_resume_button"
-        style="@style/Widget.FluentUI.Button"
         android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginTop="14dp"
-        android:backgroundTint="@color/azure_communication_ui_calling_primary_selector"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:text="@string/azure_communication_ui_calling_resume"
-        android:focusable="true"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textColor="?attr/azure_communication_ui_calling_foreground_on_primary_color"
-        app:backgroundTint="@color/azure_communication_ui_calling_primary_selector"
-        />
+        android:layout_height="@dimen/button_height_44dp"
+        android:layout_marginTop="@dimen/margin_16dp">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/bg_dark_purple_rounded_r8" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/setup_join_call_button_background"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/button_height_40dp"
+            android:background="@drawable/bg_purple_rounded_r8" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/azure_communication_ui_setup_start_call_button_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="@dimen/padding_16dp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="@dimen/margin_2dp"
+            android:textAllCaps="true"
+            android:focusable="true"
+            android:text="@string/azure_communication_ui_calling_resume"
+            android:textColor="@color/white"
+            android:fontFamily="@font/circular_std_bold"
+            android:textSize="@dimen/text_size_16" />
+
+    </FrameLayout>
 
 </com.acs_plugin.calling.presentation.fragment.calling.hold.OnHoldOverlayView>
