--- a/android/src/main/res/layout/azure_communication_ui_calling_call_lobby_overlay.xml
+++ b/android/src/main/res/layout/azure_communication_ui_calling_call_lobby_overlay.xml
@@ -2,7 +2,8 @@
    Copyright (c) Microsoft Corporation. All rights reserved.
    Licensed under the MIT License.
   -->
-<com.acs_plugin.calling.presentation.fragment.calling.lobby.WaitingLobbyOverlayView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.acs_plugin.calling.presentation.fragment.calling.lobby.WaitingLobbyOverlayView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/azure_communication_ui_call_lobby_overlay"
     android:layout_width="0dp"
@@ -16,38 +17,33 @@
     app:layout_constraintBottom_toTopOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    >
+    app:layout_constraintTop_toTopOf="parent">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/azure_communication_ui_call_call_lobby_overlay_wait_for_host_image"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="@dimen/icon_size_24dp"
+        android:layout_height="@dimen/icon_size_24dp"
         android:importantForAccessibility="no"
         android:contentDescription="@string/azure_communication_ui_calling_lobby_view_text_waiting_for_host"
         android:src="@drawable/azure_communication_ui_calling_ic_fluent_clock_24_filled"
-        />
+        app:tint="@color/text_primary" />
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/azure_communication_ui_call_lobby_overlay_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="@dimen/margin_16dp"
         android:text="@string/azure_communication_ui_calling_lobby_view_text_waiting_for_host"
-        android:textColor="@color/azure_communication_ui_calling_color_on_background"
-        android:textSize="20sp"
-        />
+        style="@style/Text.CircularStdBold.20sp" />
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/azure_communication_ui_call_lobby_overlay_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
+        android:paddingHorizontal="@dimen/padding_12dp"
         android:textAlignment="center"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/margin_10dp"
         android:text="@string/azure_communication_ui_calling_lobby_view_text_waiting_details"
-        android:textColor="@color/azure_communication_ui_calling_color_on_background"
-        />
+        style="@style/Text.CircularStdMedium.14sp" />
 
 </com.acs_plugin.calling.presentation.fragment.calling.lobby.WaitingLobbyOverlayView>
