--- a/android/src/main/res/layout/azure_communication_ui_calling_connecting_lobby_overlay.xml
+++ b/android/src/main/res/layout/azure_communication_ui_calling_connecting_lobby_overlay.xml
@@ -2,11 +2,12 @@
    Copyright (c) Microsoft Corporation. All rights reserved.
    Licensed under the MIT License.
   -->
-<com.acs_plugin.calling.presentation.fragment.calling.connecting.overlay.ConnectingOverlayView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.acs_plugin.calling.presentation.fragment.calling.connecting.overlay.ConnectingOverlayView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/azure_communication_ui_call_connecting_lobby_overlay"
-    android:layout_width="0dp"
-    android:layout_height="0dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_row="2"
     android:layout_column="0"
     android:background="@color/azure_communication_ui_calling_color_surface"
@@ -21,27 +22,22 @@
     <ProgressBar
         android:id="@+id/azure_communication_ui_call_connecting_progress_bar"
         style="?android:attr/progressBarStyleLarge"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="@dimen/progress_size_32dp"
+        android:layout_height="@dimen/progress_size_32dp"
         android:contentDescription="@string/azure_communication_ui_calling_setup_view_button_connecting_call"
-        android:indeterminateTint="?attr/azure_communication_ui_calling_primary_color"
-        />
+        android:indeterminateTint="@color/purple" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/azure_communication_ui_call_connecting_joining_text"
-        style="@style/AzureCommunicationUICalling.ButtonText"
+        style="@style/Text.CircularStdBold.20sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:drawablePadding="4dp"
+        android:drawablePadding="@dimen/padding_4dp"
         android:gravity="center"
         android:stateListAnimator="@null"
         android:text="@string/azure_communication_ui_calling_setup_view_button_connecting_call"
         android:contentDescription="@string/azure_communication_ui_calling_setup_view_button_connecting_call"
-        android:textSize="@dimen/azure_communication_ui_calling_connecting_textsize"
-        android:textColor="@color/azure_communication_ui_calling_color_text_primary"
         android:importantForAccessibility="yes"
-        android:focusable="true"
-        />
+        android:focusable="true" />
 
 </com.acs_plugin.calling.presentation.fragment.calling.connecting.overlay.ConnectingOverlayView>
