Updated design for leave call dialog

--- a/android/src/main/res/layout/audio_device_list_view.xml
+++ b/android/src/main/res/layout/audio_device_list_view.xml
@@ -18,7 +18,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/bottom_drawer_table"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_16dp" />
 
     <View
         android:layout_width="match_parent"
