--- a/android/src/main/res/values/dimens.xml
+++ b/android/src/main/res/values/dimens.xml
@@ -69,9 +69,11 @@
     <!-- Stroke -->
     <dimen name="stroke_width_1dp">1dp</dimen>
     <dimen name="stroke_width_2dp">2dp</dimen>
+    <dimen name="stroke_width_4dp">4dp</dimen>
 
     <!-- Icon size -->
     <dimen name="icon_size_14dp">14dp</dimen>
+    <dimen name="icon_size_18dp">18dp</dimen>
     <dimen name="icon_size_24dp">24dp</dimen>
 
     <!-- Progress size -->
