--- a/android/src/main/res/layout/azure_communication_ui_calling_call_local_pip_video.xml
+++ b/android/src/main/res/layout/azure_communication_ui_calling_call_local_pip_video.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.2" />
+        app:layout_constraintGuide_percent="0.25" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
@@ -24,6 +24,7 @@
         android:elevation="@dimen/elevation_4dp"
         android:background="@drawable/bg_purple_rounded_r8"
         android:backgroundTint="@color/light_purple"
+        android:layout_margin="@dimen/margin_8dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintDimensionRatio="9:16"
         app:layout_constraintBottom_toBottomOf="@+id/azure_communication_ui_guideline"
