--- a/android/src/main/res/layout/azure_communication_ui_calling_participant_avatar_view.xml
+++ b/android/src/main/res/layout/azure_communication_ui_calling_participant_avatar_view.xml
@@ -4,18 +4,27 @@
   -->
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    >
+    android:orientation="horizontal">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/azure_communication_ui_participant_avatar_view_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="2dp"
-        android:background="@drawable/azure_communication_ui_calling_corner_radius_rectangle_4dp_surface"
-        >
+        android:layout_margin="@dimen/margin_4dp"
+        android:background="@drawable/bg_light_pink_rounded_r12">
+
+        <FrameLayout
+            android:id="@+id/azure_communication_ui_participant_view_avatar_is_speaking_frame"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/bg_rounde_purple_frame_r12"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -25,63 +34,55 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            >
+            app:layout_constraintTop_toTopOf="parent">
 
-            <FrameLayout
-                android:id="@+id/azure_communication_ui_participant_view_avatar_is_speaking_frame"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="6dp"
-                >
+            <include layout="@layout/azure_communication_ui_calling_participant_avatar" />
 
-                <include layout="@layout/azure_communication_ui_calling_participant_avatar" />
-            </FrameLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:orientation="horizontal"
-                >
-
-                <TextView
-                    android:id="@+id/azure_communication_ui_participant_audio_view_display_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="4dp"
-                    android:layout_weight="1"
-                    android:ellipsize="end"
-                    android:singleLine="true"
-                    android:textColor="@color/azure_communication_ui_calling_color_on_background"
-                    />
-
-                <ImageView
-                    android:id="@+id/azure_communication_ui_participant_audio_view_mic_indicator"
-                    android:layout_width="17dp"
-                    android:layout_height="17dp"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="5dp"
-                    android:layout_weight="0"
-                    app:srcCompat="@drawable/azure_communication_ui_calling_ic_fluent_mic_off_24_filled_composite_button_filled"
-                    />
-            </LinearLayout>
-
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/azure_communication_ui_calling_participant_audio_view_on_hold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:ellipsize="end"
-                android:layout_marginStart="2dp"
-                android:visibility="invisible"
-                android:singleLine="true"
-                android:layout_marginTop="10dp"
+                android:visibility="gone"
+                tools:visibility="visible"
+                android:maxLines="1"
+                android:layout_marginTop="@dimen/margin_10dp"
                 android:text="@string/azure_communication_ui_calling_remote_participant_on_hold"
-                android:textSize="15sp"
-                android:textColor="@color/azure_communication_ui_calling_color_on_background"
-                />
+                style="@style/Text.CircularStdBook.16sp" />
 
         </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/participant_layer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_8dp"
+            android:paddingHorizontal="@dimen/padding_8dp"
+            android:paddingVertical="@dimen/padding_4dp"
+            android:orientation="horizontal"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/azure_communication_ui_participant_audio_view_display_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="1"
+                style="@style/Text.CircularStdBook.14sp"
+                tools:text="User123"/>
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/azure_communication_ui_participant_audio_view_mic_indicator"
+                android:layout_width="@dimen/icon_size_14dp"
+                android:layout_height="@dimen/icon_size_14dp"
+                android:layout_gravity="center"
+                android:layout_marginStart="@dimen/margin_4dp"
+                app:tint="@color/text_primary"
+                app:srcCompat="@drawable/ic_microphone_off" />
+
+        </LinearLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </merge>
