--- a/android/src/main/res/values/colors.xml
+++ b/android/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="gray_background">#F5F5F5</color>
     <color name="success">#2EEE63</color>
     <color name="error">#DC2626</color>
+    <color name="yellow">#FAC565</color>
     <color name="white">#FFFFFF</color>
 
     <color name="purple_op_60">#996048DE</color>
