--- a/android/src/main/res/layout/azure_communication_ui_calling_call_local_pip_video.xml
+++ b/android/src/main/res/layout/azure_communication_ui_calling_call_local_pip_video.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.25" />
+        app:layout_constraintGuide_percent="0.75" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
@@ -25,9 +25,9 @@
         android:background="@drawable/bg_purple_rounded_r8"
         android:backgroundTint="@color/light_purple"
         android:layout_margin="@dimen/margin_8dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="9:16"
-        app:layout_constraintBottom_toBottomOf="@+id/azure_communication_ui_guideline"
+        app:layout_constraintTop_toBottomOf="@+id/azure_communication_ui_guideline"
         app:layout_constraintEnd_toEndOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -56,6 +56,15 @@
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
+
+        <com.acs_plugin.calling.presentation.fragment.calling.reactionoverlay.ReactionOverlayView
+            android:id="@+id/local_participant_pip_reaction_overlay"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <include
             android:id="@+id/azure_communication_ui_call_local_pip_switch_camera_button"
