--- a/android/src/main/res/layout/azure_communication_ui_calling_call_local_user_view.xml
+++ b/android/src/main/res/layout/azure_communication_ui_calling_call_local_user_view.xml
@@ -22,7 +22,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <include layout="@layout/azure_communication_ui_calling_call_local_pip_video"/>
+    <include layout="@layout/azure_communication_ui_calling_call_local_pip_video" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/azure_communication_ui_call_switch_camera_button"
@@ -64,6 +64,15 @@
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.acs_plugin.calling.presentation.fragment.calling.reactionoverlay.ReactionOverlayView
+        android:id="@+id/local_participant_reaction_overlay"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/local_participant_layer"
