--- a/android/src/main/res/values/colors.xml
+++ b/android/src/main/res/values/colors.xml
@@ -15,5 +15,6 @@
     <color name="orange">#EC6E00</color>
     <color name="white">#FFFFFF</color>
 
+    <color name="white_op_40">#66FFFFFF</color>
     <color name="purple_op_60">#996048DE</color>
 </resources>
